--- a/app/styles/components/media.css
+++ b/app/styles/components/media.css
@@ -224,7 +224,7 @@ div:not(#app) > div[data-reactroot] > div > div {
         >div[class*="header"] {
             background: rgba(0, 0, 0, .75);
             justify-content: flex-end;
-            margin-right: 10px;
+            padding-right: 10px;
         }
 
     }
@@ -238,12 +238,12 @@ div:not(#app) > div[data-reactroot] > div > div {
 
     /* The figure */
     >figure {
-         height: calc(100% - var(lightbox-footer-height));
+         height: calc(100% - var(--lightbox-footer-height));
          -webkit-margin-before: 0em;
          -webkit-margin-after: 0em;
         /* The image */
         >img {
-             height: 100%;
+             height: calc(100% - var(--lightbox-footer-height));
          }
         /* The footer */
         >div {
