--- a/app/styles/containers/showcase.css
+++ b/app/styles/containers/showcase.css
@@ -11,11 +11,9 @@
 .share-icons {
     display: flex;
     position: absolute;
-    top: var(--header-height);
+    top: calc(var(--header-height) - 20px);
     height: 32px;
     right: var(--model-3d-document-overlap);
-    padding:5px;
-    margin-right: 10px;
     &:hover {
          cursor: pointer;
     }
